@@ -97,14 +97,15 @@ to that orientation. Otherwise the orientation assumed is X=[100], Y=[010], Z=[0
 <ul>
   <li>The &#60;file&#62; may contain a first line containing three integers NX, NY, NZ, defining the number of grid elements along each Cartesian direction. In that case all grid elements are rectangular boxes with the same dimensions. Then the file must contain NXxNYxNZ numbers 0 or 1, either contiguous or separated by blank spaces, in one or several lines (in the limit of 4096 characters per line). Each value corresponds to one grid element, starting by increasing X, then Y, and finally Z. A 0 means that atoms inside a grid element must <em>not</em> be selected, and 1 that they must be selected.</li>
   
-  <li>Or, the &#60;file&#62; may contain lines giving the positions (x,y,z) of elements of the grid (either in &Aring; or in reduced coordinates), followed by an integer number, 1 to select atoms inside that grid element, or 0 to un-select them. The elements of the grid may form a regular pattern, or have any arbitrary positions.</li>
+  <li>Or, the &#60;file&#62; may start with a line containing the keyword "Finite element", followed by lines giving the positions (x,y,z) of elements of the grid (either in &Aring; or in reduced coordinates), followed by an integer number, 1 to select atoms inside that grid element, or 0 to un-select them. The elements of the grid may form a regular pattern, or have any arbitrary positions.</li>
   
   <li>Or, the &#60;file&#62; may contain lines of ASCII characters, giving a visual representation of a 2-D grid (see examples below). Any blank space or 0 is interpreted as a zero (i.e. atoms are not selected), and any other ASCII character as a 1 (i.e. atoms are selected). This can be useful to select simple geometric forms, like letters or an ASCII art. You may use tools like <a href="http://figlet.org/">figlet</a> to convert text into ASCII art, or <a href="https://csl.name/jp2a/">jp2a</a> to convert a JPG image into an ASCII text file. Then, Atomsk can use such text files as grids to select atoms.</li>
 </ul>
 
 <p>The two first formats allow to manipulate 2-D or 3-D grids; the last one only allows to generate 2-D grids (see examples below). This option can be used to select complex shapes.</p>
 
-<p>When using <strong>-select stl</strong>, atoms are selected according to the 3-D shape defined in the &#60;file&#62;. The &#60;file&#62; must comply to the <a href="https://en.wikipedia.org/wiki/STL_(file_format)">STL file format</a>, either in ASCII or in binary form. This file format is widely used in 3-D printing and other 3-D applications, and can be generated by a large number of 3-D softwares, a few examples being <a href="http://tinkercad.com/">Tinkercad</a>, <a href="http://www.blender.org/">Blender</a>, or <a href="http://sketchup.google.com/">Google Sketchup</a>; or, models can be downloaded from a variety of sources, e.g. <a href="https://cults3d.com/">Cults</a>, <a href="https://pinshape.com/">Pinshape</a>, or <a href="https://www.thingiverse.com/">Thingiverse</a>. After reading the STL file, Atomsk automatically rescales the 3-D model to fit the dimensions of the atomic system, the scaling factor being equal to the smallest ratio between an atomic box dimension and the corresponding 3-D model dimension. If the keyword "center" appears before the name of the &#60;file&#62;, then the 3-D model is placed at the center of the atomic box. Otherwise, the 3-D model is not translated in any way. Atoms that are <em>inside</em> of the 3-D model are selected; to select atoms that are outside of it, simply use "-select invert". Note that, if the 3-D model contains a large number of triangles (over 100,000), the selection may take a long time to perform.</p>
+<p>When using <strong>-select stl</strong>, atoms are selected according to the 3-D shape defined in the &#60;file&#62;. The &#60;file&#62; must comply to the <a href="https://en.wikipedia.org/wiki/STL_(file_format)">STL file format</a>, either in ASCII or in binary form. This file format is widely used in 3-D printing and other 3-D applications, and can be generated by a large number of 3-D softwares, a few examples being <a href="http://tinkercad.com/">Tinkercad</a>, <a href="http://www.blender.org/">Blender</a>, or <a href="http://sketchup.google.com/">Google Sketchup</a>; or, models can be downloaded from a variety of sources, e.g. <a href="https://cults3d.com/">Cults</a>, <a href="https://pinshape.com/">Pinshape</a>, or <a href="https://www.thingiverse.com/">Thingiverse</a>. After reading the STL file, Atomsk automatically rescales the 3-D model to fit the dimensions of the atomic system, the scaling factor being equal to the smallest ratio between an atomic box dimension and the corresponding 3-D model 
+dimension. If the keyword "center" appears before the name of the &#60;file&#62;, then the 3-D model is placed at the center of the atomic box. Otherwise, the 3-D model is not translated in any way. Atoms that are <em>inside</em> of the 3-D model are selected; to select atoms that are outside of it, simply use "-select invert". Note that, if the 3-D model contains a large number of triangles (over 100,000), the selection may take a long time to perform.</p>
 
 <p>The options called after the option <code>-select</code> will be applied only to the atoms that are selected by the present option, refer to their documentation to know how each option treats selected atoms. Beware that some options can result in strange (i.e. non-physical) results when applied to some atoms only.</p>
 
@@ -189,7 +190,8 @@ to that orientation. Otherwise the orientation assumed is X=[100], Y=[010], Z=[0
 <p>The file "grid.txt" contains a first line defining the number of grid elements: the atomic system will be decomposed into a grid of size 4x4x3. Then, the following lines provide the status (0 or 1) of the 48 elements of the grid (note that blank spaces and empty lines are ignored). A value of 1 means that atoms inside that element will be selected, and a value of 0 that they will not. Each group of 4x4 values represent an XY plane, and there are three such groups along Z. So, Atomsk will read the file "initial.cfg", automatically scale the grid so that it matches the box dimensions, select atoms that are inside the grid elements marked "1", and <a href="./option_rmatom.html">remove selected atoms</a>. The result will be written into "final.xyz".</p></li>
 
 <li><div class="txtfile"><h5>grid.txt</h5>
-<p><code>0.2354 0.2 0.4013540 1<br/>
+<p><code>Finite element<br/>
+0.2354 0.2 0.4013540 1<br/>
 0.196874 0.5354 0.541 0<br/>
 0.9432587 0.651 0.3554 1<br/>
 0.68354 0.2189 0.35 0<br/>
