@@ -10,7 +10,7 @@ MODULE messages_FR
 !*     Université de Lille, Sciences et Technologies                              *
 !*     UMR CNRS 8207, UMET - C6, F-59655 Villeneuve D'Ascq, France                *
 !*     pierre.hirel@univ-lille1.fr                                                *
-!* Last modification: P. Hirel - 25 Jan. 2018                                     *
+!* Last modification: P. Hirel - 30 Jan. 2018                                     *
 !**********************************************************************************
 !* This program is free software: you can redistribute it and/or modify           *
 !* it under the terms of the GNU General Public License as published by           *
@@ -2279,6 +2279,11 @@ CASE(3716)
   msg = "            que certains formats de sortie ne supportent pas."
   CALL DISPLAY_MSG(1,msg,logfile)
   msg = "            Les coquilles seront perdues dans certains fichiers de sortie."
+  CALL DISPLAY_MSG(1,msg,logfile)
+CASE(3717)
+  !reals(1) = total charge
+  WRITE(temp,'(f9.3)') reals(1)
+  msg = "/!\ ALERTE : la boîte a une charge électrique non nulle : Q_total = "//TRIM(ADJUSTL(temp))
   CALL DISPLAY_MSG(1,msg,logfile)
 !
 !3800-3899: ERROR MESSAGES
